examples/test/testpolicy17304.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17304
  namespace: namespace484
spec:
  podSelector:
    matchLabels:
      key11: value5
      key14: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value39
          key31: value49
          key11: value17
      podSelector:
        matchLabels:
          key43: value41
